blog post height fix, footer color edit, text align on footer nav

--- a/About.css
+++ b/About.css
@@ -949,7 +949,7 @@ margin-top: 25px;
       .Footer{
         width: 100%;
         height: 800px;
-        background-color: #553264;
+        background-color: #2E3533;
         display: flex;
         align-items: flex-start;
         justify-content:space-evenly;
@@ -995,15 +995,17 @@ margin-top: 25px;
        display: block;
        margin-left: 20px; 
        margin-right:0px;
-       background-color;
+       text-align: left;
       
     }
     .footer-nav h2{
        margin:20px 0px;
+       text-align: left;
     }
     
     .footer-nav ul{
         margin-top: 0px;
+        display: inline-block;
     }
     
     
