--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1818,7 +1818,7 @@ display: none;
 .Footer{
     width: 100%;
     height: 800px;
-    background-color: #553264;
+    background-color: #2E3533;
     display: flex;
     align-items: flex-start;
     justify-content:space-evenly;
@@ -1864,11 +1864,16 @@ align-items: flex-start;
    display: block;
    margin-left: 20px; 
    margin-right:0px;
-   background-color;
-  
+   align-items: flex-start;
+   text-align: left; 
 }
 .footer-nav h2{
    margin:20px 0px;
+   text-align: left;
+}
+
+.footer-nav ul{
+    display: inline-block;
 }
 
 .footer-nav ul{
@@ -2017,7 +2022,7 @@ align-items: flex-start;
 
     
     .blog-post{
-        height: 400px;
+        height: 300px;
         width: 60%;
         margin: 20px;
         
@@ -2034,7 +2039,7 @@ align-items: flex-start;
     }
 
     .blog-post h3{
-        top: 320;
+        top: 250;
         left: 10;
         
     }
